--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
-spring.application.name=cursos
+spring.datasource.url=jdbc:postgresql://localhost:5432/cursos
+spring.datasource.username=postgres
+spring.datasource.password=Lf34813381
+spring.jpa.hibernate.ddl-auto=update
+
+spring.jpa.properties.hibernate.hbm2ddl.auto=update
+spring.jpa.generate-ddl=true
+
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
